--- a/server/package.json
+++ b/server/package.json
@@ -9,25 +9,25 @@
     "type-install": "npm install --save-dev @types/node @types/cors @types/express @types/multer @types/bcryptjs @types/jsonwebtoken @types/mongoose"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "mongoose": "^7.0.0",
-    "dotenv": "^16.0.3",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0",
     "cloudinary": "^1.37.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13",
-    "@types/multer": "^1.4.7",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.25",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.1"
+    "@types/multer": "^1.4.13",
+    "@types/node": "^20.19.27",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
