--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "lib": ["ES2020"],
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./server",  // ✅ CORRECT
     "strict": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -13,10 +13,10 @@
     "moduleResolution": "node",
     "baseUrl": "./",
     "paths": {
-      "*": ["node_modules/*", "src/types/*"]
+      "*": ["node_modules/*", "server/src/types/*"]  // ✅ CORRECT
     },
-    "typeRoots": ["./node_modules/@types", "./src/types"]
+    "typeRoots": ["./node_modules/@types", "./server/src/types"]  // ✅ CORRECT
   },
-  "include": ["src/**/*"],
+  "include": ["server/**/*"],  // ✅ CORRECT
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
