--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.13.2",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.559.0",
-    "next": "16.0.3",
+    "next": "^14.2.5",
     "next-intl": "^4.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
