--- a/client/package.json
+++ b/client/package.json
@@ -6,29 +6,27 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start -p 3000",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.13.2",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.559.0",
-    "next": "^14.2.5",
+    "next": "14.2.35",
     "next-intl": "^4.5.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hot-toast": "^2.6.0",
     "swiper": "^12.0.3",
-    "uuidv4": "^6.2.13"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/uuid": "^10.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.3",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.35",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.4.5"
   }
 }
