--- a/client/package.json
+++ b/client/package.json
@@ -9,24 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.13.2",
-    "framer-motion": "^12.23.26",
-    "lucide-react": "^0.559.0",
     "next": "14.2.35",
-    "next-intl": "^4.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.6.0",
-    "swiper": "^12.0.3",
-    "uuid": "^10.0.0"
+
+    "axios": "^1.6.8",
+    "framer-motion": "^11.11.11",
+    "lucide-react": "^0.400.0",
+    "next-intl": "^4.5.6",
+    "react-hot-toast": "^2.4.1",
+    "swiper": "^11.1.15",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "typescript": "^5.4.5",
+    "@types/node": "^20.11.19",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.35",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.4.5"
+    "tailwindcss": "^3.4.17"
   }
 }
