--- a/client/package.json
+++ b/client/package.json
@@ -9,26 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.35",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-
+    "@next/swc-win32-x64-msvc": "^16.1.1",
     "axios": "^1.6.8",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.400.0",
+    "next": "^14.2.35",
     "next-intl": "^4.5.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "swiper": "^11.1.15",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.35",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.4.5"
   }
 }
