--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/swc-win32-x64-msvc": "^16.1.1",
     "axios": "^1.6.8",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.400.0",
-    "next": "^14.2.35",
+    "next": "14.2.35",
     "next-intl": "^4.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
