--- a/client/package.json
+++ b/client/package.json
@@ -21,13 +21,16 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.35",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.4.5"
-  }
+  "@tailwindcss/postcss": "^4.1.18",
+  "autoprefixer": "^10.4.19",
+  "postcss": "^8.4.38",
+  "@types/node": "^20.11.19",
+  "@types/react": "^18.2.66",
+  "@types/react-dom": "^18.2.22",
+  "eslint": "^8.57.0",
+  "eslint-config-next": "14.2.35",
+  "tailwindcss": "^3.4.17",
+  "typescript": "^5.4.5"
+}
+
 }
