--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,13 @@
 {
   "name": "client",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.35",
+    "next": "^16.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "axios": "^1.6.8",
@@ -24,11 +22,11 @@
     "tailwindcss": "^3.4.17",
     "postcss": "^8.4.38",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.35",
     "typescript": "^5.4.5",
-    "@types/node": "^20.11.19",
     "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22"
+    "@types/react-dom": "^18.2.22",
+    "@types/node": "^20.11.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.35"
   }
 }
