--- a/client/package.json
+++ b/client/package.json
@@ -18,17 +18,20 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "swiper": "^11.1.15",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.20"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.35",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5.4.5"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
