--- a/admin/package.json
+++ b/admin/package.json
@@ -22,11 +22,10 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/node": "^25.0.3",
-    "@types/react": "^19.2.7",
-    "autoprefixer": "^10.4.23",
-    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.3"
+    "postcss": "^8.5.6",
+    "typescript": "^5.9.3",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7"
   }
 }
