--- a/client/package.json
+++ b/client/package.json
@@ -9,26 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "axios": "^1.6.8",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.400.0",
     "next": "14.2.35",
     "next-intl": "^4.5.6",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "swiper": "^11.1.15",
-    "uuid": "^9.0.1",
     "tailwindcss": "^3.4.17",
-    "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.20"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.66",
+    "@types/node": "^20.19.27",
+    "@types/react": "^18.3.27",
     "@types/react-dom": "^18.2.22",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.35",
-    "typescript": "^5.4.5"
+    "typescript": "^5.9.3"
   }
 }
