--- a/admin/package.json
+++ b/admin/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "admin",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 3001",
+    "start": "next start -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.9",
-    "axios": "^1.13.2",
-    "framer-motion": "^12.23.26",
-    "lucide-react": "^0.562.0",
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-hot-toast": "^2.6.0",
-    "react-icons": "^5.5.0",
-    "recharts": "^3.6.0"
-  },
-  "devDependencies": {
+    "axios": "^1.6.8",
+    "framer-motion": "^11.11.11",
+    "lucide-react": "^0.400.0",
+    "next": "14.2.35",
+    "next-intl": "^4.5.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "swiper": "^11.1.15",
+    "uuid": "^9.0.1",
     "tailwindcss": "^3.4.17",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.20",
-    "typescript": "^5.9.3",
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.2.55"
+    "autoprefixer": "^10.4.20"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.35",
+    "typescript": "^5.4.5"
   }
 }
