--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
 
-    "allowJs": false,
+    "allowJs": true,
     "strict": true,
     "skipLibCheck": true,
     "noEmit": true,
