--- a/admin/package.json
+++ b/admin/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0",
     "recharts": "^3.6.0",
     "swiper": "^11.1.15",
     "tailwindcss": "^3.4.17",
